Added avatars for users + avatar uploading + custom 404 error page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,7 @@
 main.login=LOG IN
+error.404=RESOURCE NOT FOUND
+common.thread=THREAD 
+common.creator=CREATOR
+common.created=CREATED
+common.post.count=POST COUNT 
+
