--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,8 @@
 main.login=LOG IN
+error.404=RESOURCE NOT FOUND
+common.thread=THREAD 
+common.creator=CREATOR
+common.board=BOARD
+common.created=CREATED
+common.post.count=POST COUNT 
+
